# qtjsapi

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.md  RJSApi.cpp  RJSApi.h  RJSDowncaster.h  RJSTools.cpp  RJSTools.h  RJSTypeEnum.cpp  RJSTypeEnum.h  RJSTypeEnumExample.cpp  RJSTypeEnumExample.h  RJSWrapper.cpp  RJSWrapper.h  RJSWrapperObj.cpp  RJSWrapperObj.h  build.sh  copyproperties.js  fixes.js  qtjsapi.qrc  qtjsapi_global.h  rjsapi.qrc  rjsapi_global.h  update_qrc.sh
console/: CMakeLists.txt  main.cpp
console/examples/HelloWorld/: HelloWorld.js
console/examples/MyWidget/: MyWidget.js
generator/: .gitignore  CMakeInclude.txt  RJSHelper.cpp  RJSHelper.h  RJSHelper_dummy.cpp  RJSHelper_dummy_ptr.cpp  RJSHelper_manual.cpp  RJSHelper_primitive.cpp  RJSHelper_qhash.cpp  RJSHelper_qlist.cpp  RJSHelper_qlist_ptr.cpp  RJSHelper_qlist_shared_ptr.cpp  RJSHelper_qmap.cpp  RJSHelper_qpair.cpp  RJSHelper_qset.cpp  RJSHelper_shared_ptr.cpp  RJSHelper_shared_ptr_no_copy.cpp  RJSHelper_wrapped.cpp  RJSHelper_wrapped_ptr.cpp  RJSHelper_wrapped_qobject_ptr.cpp  RJSType.cpp  RJSType.h  cpp2xml.sh  default_value_to_js.xml  filter_type_name.xml  fix_type.xml  generate.sh  generate_CMakeInclude.sh  header_cpp.h  ignore_class.xml  ignore_function.xml  ignore_include.xml  include_file.xml  inheritable_class.xml  merge_modules.xml  non_copyable_class.xml  qabstractspinbox.h  qcolordialog.h  qinputdialog.h  shared.xsl  (+26 more)
generator/cpp/: qabstractbutton_base.cpp  qabstractbutton_base.h  qabstractbutton_wrapper.cpp  qabstractbutton_wrapper.h  qabstractfileiconprovider_base.cpp  qabstractfileiconprovider_base.h  qabstractfileiconprovider_wrapper.cpp  qabstractfileiconprovider_wrapper.h  qabstractitemdelegate_base.cpp  qabstractitemdelegate_base.h  qabstractitemdelegate_wrapper.cpp  qabstractitemdelegate_wrapper.h  qabstractitemmodel_base.cpp  qabstractitemmodel_base.h  qabstractitemmodel_wrapper.cpp  qabstractitemmodel_wrapper.h  qabstractitemview_base.cpp  qabstractitemview_base.h  qabstractitemview_wrapper.cpp  qabstractitemview_wrapper.h  qabstractlistmodel_wrapper.h  qabstractprintdialog_base.cpp  qabstractprintdialog_base.h  qabstractprintdialog_wrapper.cpp  qabstractprintdialog_wrapper.h  qabstractscrollarea_base.cpp  qabstractscrollarea_base.h  qabstractscrollarea_wrapper.cpp  qabstractscrollarea_wrapper.h  qabstractslider_base.cpp  qabstractslider_base.h  qabstractslider_wrapper.cpp  qabstractslider_wrapper.h  qabstractspinbox_base.cpp  qabstractspinbox_base.h  qabstractspinbox_wrapper.cpp  qabstractspinbox_wrapper.h  qaction_base.cpp  qaction_base.h  qaction_wrapper.cpp  (+681 more)
generator/js/: QAbstractButton.js  QAbstractFileIconProvider.js  QAbstractItemDelegate.js  QAbstractItemModel.js  QAbstractItemView.js  QAbstractListModel.js  QAbstractPrintDialog.js  QAbstractScrollArea.js  QAbstractSlider.js  QAbstractSpinBox.js  QAbstractTableModel.js  QAction.js  QActionEvent.js  QActionGroup.js  QApplication.js  QBitmap.js  QBoxLayout.js  QBrush.js  QBuffer.js  QButtonGroup.js  QByteArray.js  QCalendar.js  QCheckBox.js  QClipboard.js  QColor.js  QColorDialog.js  QComboBox.js  QCompleter.js  QConicalGradient.js  QContextMenuEvent.js  QCoreApplication.js  QCursor.js  QDate.js  QDateTime.js  QDesktopServices.js  QDialog.js  QDialogButtonBox.js  QDir.js  QDirIterator.js  QDockWidget.js  (+228 more)
generator/srcml/: info.txt  qevent.srcml  qjsengine.srcml  qqmlapplicationengine.srcml  qqmlengine.srcml  qquickview.srcml
generator/templates/: header_cpp_header.h  header_h_header.h
generator/xml/: qabstractbutton.xml  qabstractfileiconprovider.xml  qabstractitemdelegate.xml  qabstractitemmodel.xml  qabstractitemview.xml  qabstractprintdialog.xml  qabstractscrollarea.xml  qabstractslider.xml  qabstractspinbox.xml  qaction.xml  qactiongroup.xml  qapplication.xml  qbitmap.xml  qboxlayout.xml  qbrush.xml  qbuffer.xml  qbuttongroup.xml  qbytearray.xml  qcalendar.xml  qcheckbox.xml  qclipboard.xml  qcolor.xml  qcolordialog.xml  qcombobox.xml  qcompleter.xml  qcoreapplication.xml  qcoreevent.xml  qcursor.xml  qdatetime.xml  qdesktopservices.xml  qdialog.xml  qdialogbuttonbox.xml  qdir.xml  qdiriterator.xml  qdockwidget.xml  qdom.xml  qdrag.xml  qeasingcurve.xml  qevent.xml  qeventloop.xml  (+132 more)
generator/xml_auto/: info.txt  qevent.xml  qqmlapplicationengine.xml  qquickview.xml
